@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20020629
+MANIFEST for ded, version t20020703
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
